--- a/hive_management/templates/hive_detail.html
+++ b/hive_management/templates/hive_detail.html
@@ -102,6 +102,8 @@
                         {% else %}
                             not visible
                         {% endif %}
+                        <br>
+                        Honey: {{ inspection.honey }}%
                     </p>
                     </div>
                 </div>
