--- a/hive_management/templates/remove_hive.html
+++ b/hive_management/templates/remove_hive.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="container-sm">
+<div class="container-sm text-center">
     <br>&nbsp;
     <h5>Remove hive {{ hive.name }}?</h5>
     <form action="" method="post">
         {% csrf_token %}
-        <input type="submit" value="Remove" class="form-control">
-        <a href="{% url 'hive_detail' hive.pk %}" class="text-danger">Cancel</a>
+        <input type="submit" value="Remove" type="button" class="btn btn-light">
+        <a href="{% url 'hive_detail' hive.pk %}" type="button" class="btn btn-danger">Cancel</a>
     </form>
     <br>
 </div>
