--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -74,7 +74,7 @@
             <table class="table">
                 <thead>
                   <tr>
-                    <th scope="col">C</th>
+                    <th scope="col"></th>
                     <th scope="col">Name</th>
                     <th scope="col">Date</th>
                     <th scope="col">Description</th>
