--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -16,6 +16,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new_hive' %}">Add a new hive <i class="bi bi-file-plus"></i></a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Locations
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="{% url 'new_hive' %}">New treatment</a>
                 </li>
@@ -47,8 +58,8 @@
             <p class="lead" style="background-color: {{ hive.color }}; font-size: 5px;">&nbsp;</p>
             <h6 class="card-subtitle mb-2 text-muted">{{ hive.created_on }}</h6>
             <p class="card-text">
-                {{ hive.description | linebreaks | slice:"200" }}...
-                <br>
+                {{ hive.description | linebreaks | slice:"200" }}
+                <hr class="my-4">
                 {{ hive.supers }} supers / {{ hive.frames }} frames
                 <br>
                 Purpose: {{ hive.purpose }}
