--- a/hive_management/templates/base.html
+++ b/hive_management/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
         <div class="container-fluid">
           <div class="navbar-brand">nxBee</div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
     {% block page_content %}{% endblock %}
         <div class="col">
           <div class="card h-100">
-            <div class="card-footer" style="text-align: center;">
+            <div class="card-footer" style="text-align: center; background-color: #e3f2fd;">
               <small class="text-muted">Balázs Nagy 2023</small>
             </div>
           </div>
