created tutorial page

--- a/hive_management/templates/base.html
+++ b/hive_management/templates/base.html
@@ -25,14 +25,14 @@
                 <a class="nav-link" href="{% url 'hive_management' %}">Hive Management</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="{% url 'donate' %}">Tutorials</a>
+                <a class="nav-link" href="{% url 'tutorials' %}">Tutorials</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="{% url 'donate' %}">Donate</a>
               </li>
             </ul>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search hive/note" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-primary" type="submit">Search</button>
             </form>
           </div>
