--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -30,6 +30,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'divide_hives' %}">Divide beehives <i class="bi bi-vr"></i></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link disabled" href="{% url 'new_hive' %}">New treatment</a>
                 </li>
                 <li class="nav-item">
@@ -44,7 +47,7 @@
 
 <div class="row">
     <div class="col-9">
-        <h5>List of Beehives:</h5>
+        <h5>List of Beehives {{ request.GET.loc }}:</h5>
             <form method="POST" class="text-end">
                 {% csrf_token %}
                 View: <button href="{{ c_p }}" class="link" name="gridlist" value="grid"><i class="bi bi-grid-3x2-gap"></i></button> | <button href="{{ c_p }}" class="link" name="gridlist" value="list"><i class="bi bi-list"></i></button>
@@ -54,13 +57,13 @@
         <div class="row row-cols-md-4 g-4">
         {% for hive in hives %}
         <div class="col-sm-3 mb-2">
-        <div class="card" style="border-color: {{ hive.color }};">
+        <div class="card h-100" style="border-color: {{ hive.color }};">
             <div class="card-body">
             <h5 class="card-title"><a href="{% url 'hive_detail' hive.pk %}" class="link-primary">{{ hive.name }}</a></h5>
             <p class="lead" style="background-color: {{ hive.color }}; font-size: 5px;">&nbsp;</p>
             <h6 class="card-subtitle mb-2 text-muted">{{ hive.created_on }}</h6>
             <p class="card-text">
-                {{ hive.description | linebreaks | slice:"200" }}
+                {{ hive.description | linebreaks | slice:"100" }}...
                 <hr class="my-4">
                 {{ hive.supers }} supers / {{ hive.frames }} frames
                 <br>
