--- a/hive_management/templates/tutorials.html
+++ b/hive_management/templates/tutorials.html
@@ -5,14 +5,14 @@
 <div class="container-fluid">
     <br>
 
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-1 g-4">
 
         <div class="col">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Add a new hive</h5>
                     <p class="card-text">
-                        In the <a href="{% url 'hive_management' %}" class="link-primary">hive management</a> You can add Your hives 
+                        In <a href="{% url 'hive_management' %}" class="link-primary">hive management</a> You can add Your hives 
                         by clicking on <a class="link-primary" href="{% url 'new_hive' %}">Add a new hive <i class="bi bi-file-plus"></i></a> link 
                     </p>
                 </div>
@@ -25,7 +25,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Add or edit a hive</h5>
                     <p class="card-text">
-                        In the <a href="{% url 'hive_management' %}" class="link-primary">hive management</a> You can add or edit your hives.
+                        In <a href="{% url 'hive_management' %}" class="link-primary">hive management</a> You can add or edit your hives.
                         You have to give some information about Your hives like hive name, color, location, etc
                     </p>
                 </div>
