--- a/hive_management/templates/homepage.html
+++ b/hive_management/templates/homepage.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block page_content %}
 <div class="container-fluid">
@@ -6,5 +7,7 @@
         nxBee is a beehive management page, where You can manage your beehives.
         <br>
         This website is still in development.
+        <br>
+        <img src="{% static 'media/beekeeping-g8e313d576_1920.jpg' %}" class="img-fluid rounded" alt="...">
 </div>
 {% endblock %}
